--- a/html/pages/index.html
+++ b/html/pages/index.html
@@ -211,6 +211,7 @@
             <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=ee84bb87-99fd-4001-95f7-8fa65d292808" type="text/javascript"></script>
         </div>
     </section>
+    <script src="./js/map.js" type="text/javascript"></script>
 </main>
 [snp tpl="template/footer.html" ]
 </body>
