--- a/html/pages/photo.html
+++ b/html/pages/photo.html
@@ -6,9 +6,9 @@
 <main class="main">
     <section class="page-heading">
         <div class="page-heading__title">
-        <h1>
-            Фотографии <br/> пользователей
-        </h1>
+            <h1>
+                Фотографии <br/> пользователей
+            </h1>
         </div>
         <p class="page-text">
             Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?
@@ -20,14 +20,17 @@
                 <span class="main-photo__informer">Панорама дня</span>
             </div>
         </div>
-        <div class="container photo-card photo-card--big">
-            <span class="photo-card__name">Анна (5 минут назад)</span>
-            <span class="photo-card__like">Нравится: 215</span>
-            <p class="photo-card__text">
-                Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе,
-                задавайте свои вопросы!
-            </p>
+        <div class="container">
+            <div class="photo-card photo-card__content photo-card--big">
+                <span class="photo-card__name">Анна (5 минут назад)</span>
+                <span class="photo-card__like">Нравится: 215</span>
+                <p class="photo-card__text">
+                    Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе,
+                    задавайте свои вопросы!
+                </p>
+            </div>
         </div>
+    </section>
     </section>
     <section>
         <div class="container">
@@ -37,13 +40,15 @@
                         <div class="photo-card__img">
                             <img src="./img/photo-2-lg.png" alt="telescope">
                         </div>
-                        <span class="photo-card__name">Левон<span >(5 часов назад)</span></span>
-                        <p class="photo-card__text">
-                            Вчера он на луну летал, сегодня в руки к нам попал.
-                        </p>
-                        <div class="photo-card__like">
-                            <span>Нравится: 356</span>
-                            <button type="button" class=""><span class="i-heart"></span></button>
+                        <div class="photo-card__content">
+                            <span class="photo-card__name">Левон<span>(5 часов назад)</span></span>
+                            <p class="photo-card__text">
+                                Вчера он на луну летал, сегодня в руки к нам попал.
+                            </p>
+                            <div class="photo-card__like">
+                                <span>Нравится: 356</span>
+                                <button type="button" class=""><span class="i-heart"></span></button>
+                            </div>
                         </div>
                     </div>
                 </li>
@@ -52,13 +57,15 @@
                         <div class="photo-card__img">
                             <img src="./img/photo-3-lg.png" alt="drum kit">
                         </div>
-                        <span class="photo-card__name">Антон<span >(12 часов назад)</span></span>
-                        <p class="photo-card__text">
-                            Соседи будут рады!
-                        </p>
-                        <div class="photo-card__like">
-                             <span>Нравится: 666</span>
-                            <button type="button" class=""><span class="i-heart"></span></button>
+                        <div class="photo-card__content">
+                            <span class="photo-card__name">Антон<span>(12 часов назад)</span></span>
+                            <p class="photo-card__text">
+                                Соседи будут рады!
+                            </p>
+                            <div class="photo-card__like">
+                                <span>Нравится: 666</span>
+                                <button type="button" class=""><span class="i-heart"></span></button>
+                            </div>
                         </div>
                     </div>
                 </li>
@@ -66,14 +73,16 @@
                     <div class="photo-card__img">
                         <img src="./img/photo-4-lg.png" alt="high-rise">
                     </div>
-                    <div class="photo-card">
-                        <span class="photo-card__name">Борис<span >(20 часов назад)</span></span>
-                        <p class="photo-card__text">
-                            Здесь могла быть ваша цитата о высоком и вечном.
-                        </p>
-                        <div class="photo-card__like">
-                            <span>Нравится: 215</span>
-                            <button type="button" class=""><span class="i-heart"></span></button>
+                    <div class="photo-card__content">
+                        <div class="photo-card">
+                            <span class="photo-card__name">Борис<span>(20 часов назад)</span></span>
+                            <p class="photo-card__text">
+                                Здесь могла быть ваша цитата о высоком и вечном.
+                            </p>
+                            <div class="photo-card__like">
+                                <span>Нравится: 215</span>
+                                <button type="button" class=""><span class="i-heart"></span></button>
+                            </div>
                         </div>
                     </div>
                 </li>
@@ -82,13 +91,15 @@
                         <div class="photo-card__img">
                             <img src="./img/photo-5-lg.png" alt="watermelon fair">
                         </div>
-                        <span class="photo-card__name">Сергей<span >(25 часов назад)</span></span>
-                        <p class="photo-card__text">
-                            Самая кубанская в мире!
-                        </p>
-                        <div class="photo-card__like">
-                            <span>Нравится: 4</span>
-                            <button type="button" class=""><span class="i-heart"></span></button>
+                        <div class="photo-card__content">
+                            <span class="photo-card__name">Сергей<span>(25 часов назад)</span></span>
+                            <p class="photo-card__text">
+                                Самая кубанская в мире!
+                            </p>
+                            <div class="photo-card__like">
+                                <span>Нравится: 4</span>
+                                <button type="button" class=""><span class="i-heart"></span></button>
+                            </div>
                         </div>
                     </div>
                 </li>
@@ -97,13 +108,15 @@
                         <div class="photo-card__img">
                             <img src="./img/photo-6-lg.png" alt="the mountains">
                         </div>
-                        <span class="photo-card__name">Максим<span >(40 часов назад)</span></span>
-                        <p class="photo-card__text">
-                            Где снег-то?
-                        </p>
-                        <div class="photo-card__like">
-                            <span>Нравится: 150</span>
-                            <button type="button" class=""><span class="i-heart"></span></button>
+                        <div class="photo-card__content">
+                            <span class="photo-card__name">Максим<span>(40 часов назад)</span></span>
+                            <p class="photo-card__text">
+                                Где снег-то?
+                            </p>
+                            <div class="photo-card__like">
+                                <span>Нравится: 150</span>
+                                <button type="button" class=""><span class="i-heart"></span></button>
+                            </div>
                         </div>
                     </div>
                 </li>
@@ -112,13 +125,15 @@
                         <div class="photo-card__img">
                             <img src="./img/photo-7-lg.png" alt="airplane">
                         </div>
-                        <span class="photo-card__name">Надежда<span >(45 часов назад)</span></span>
-                        <p class="photo-card__text">
-                            Всем GM и взаимные лайки!
-                        </p>
-                        <div class="photo-card__like">
-                            <span>Нравится: 2560</span>
-                            <button type="button" class=""><span class="i-heart"></span></button>
+                        <div class="photo-card__content">
+                            <span class="photo-card__name">Надежда<span>(45 часов назад)</span></span>
+                            <p class="photo-card__text">
+                                Всем GM и взаимные лайки!
+                            </p>
+                            <div class="photo-card__like">
+                                <span>Нравится: 2560</span>
+                                <button type="button" class=""><span class="i-heart"></span></button>
+                            </div>
                         </div>
                     </div>
                 </li>
@@ -133,26 +148,26 @@
             </p>
             <div class="graphics-editor">
                 <div class="graphics-editor__img" style="background-image: url('./img/photo-8-sm.png')">
-            <div class="graphics-editor__filters">
-          <div class="graphics-editor__item">
-              <span class="i-frame"></span>
-              <span class=""></span>
-          </div>
-          <div class="graphics-editor__item">
-              <span class="i-fill"></span>
-              <span class=""></span>
-          </div>
-          <div class="graphics-editor__item">
-              <span class="i-brightness"></span>
-              <span class=""></span>
-          </div>
-                <div class="graphics-editor__control">
-                    <button type="button" class="btn graphics-editor__btn-post"></button>
-                    <button type="button" class="btn graphics-editor__btn-cancel"></button>
+                    <div class="graphics-editor__filters">
+                        <div class="graphics-editor__item">
+                            <span class="i-frame"></span>
+                            <span class=""></span>
+                        </div>
+                        <div class="graphics-editor__item">
+                            <span class="i-fill"></span>
+                            <span class=""></span>
+                        </div>
+                        <div class="graphics-editor__item">
+                            <span class="i-brightness"></span>
+                            <span class=""></span>
+                        </div>
+                        <div class="graphics-editor__control">
+                            <button type="button" class="btn graphics-editor__btn-post"></button>
+                            <button type="button" class="btn graphics-editor__btn-cancel"></button>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-        </div>
         </div>
     </section>
 
