--- a/html/pages/photo.html
+++ b/html/pages/photo.html
@@ -35,14 +35,14 @@
         </div>
     </section>
     </section>
-    <section>
+    <section class="photo-page__section-list">
         <div class="container">
             <ul class="photo-list">
                 <li class="photo-list__item">
                     <div class="photo-card">
                         <div class="photo-card__img" style="background-image: url('./img/photo-2-lg.png')"></div>
                         <div class="photo-card__content">
-                            <span class="photo-card__name">Левон<span>(5 часов назад)</span></span>
+                            <span class="photo-card__name">Левон <span>(5 часов назад)</span></span>
                             <p class="photo-card__text">
                                 Вчера он на луну летал, сегодня в руки к нам попал.
                             </p>
@@ -57,7 +57,7 @@
                     <div class="photo-card">
                         <div class="photo-card__img" style="background-image: url('./img/photo-3-lg.png')"></div>
                         <div class="photo-card__content">
-                            <span class="photo-card__name">Антон<span>(12 часов назад)</span></span>
+                            <span class="photo-card__name">Антон <span>(12 часов назад)</span></span>
                             <p class="photo-card__text">
                                 Соседи будут рады!
                             </p>
@@ -72,7 +72,7 @@
                     <div class="photo-card">
                         <div class="photo-card__img" style="background-image: url('./img/photo-4-lg.png')"></div>
                         <div class="photo-card__content">
-                            <span class="photo-card__name">Борис<span>(20 часов назад)</span></span>
+                            <span class="photo-card__name">Борис <span>(20 часов назад)</span></span>
                             <p class="photo-card__text">
                                 Здесь могла быть ваша цитата о высоком и вечном.
                             </p>
@@ -87,7 +87,7 @@
                     <div class="photo-card">
                         <div class="photo-card__img" style="background-image: url('./img/photo-5-lg.png')"></div>
                         <div class="photo-card__content">
-                            <span class="photo-card__name">Сергей<span>(25 часов назад)</span></span>
+                            <span class="photo-card__name">Сергей <span>(25 часов назад)</span></span>
                             <p class="photo-card__text">
                                 Самая кубанская в мире!
                             </p>
@@ -102,7 +102,7 @@
                     <div class="photo-card">
                         <div class="photo-card__img" style="background-image: url('./img/photo-6-lg.png')"></div>
                         <div class="photo-card__content">
-                            <span class="photo-card__name">Максим<span>(40 часов назад)</span></span>
+                            <span class="photo-card__name">Максим <span>(40 часов назад)</span></span>
                             <p class="photo-card__text">
                                 Где снег-то?
                             </p>
@@ -117,7 +117,7 @@
                     <div class="photo-card">
                         <div class="photo-card__img" style="background-image: url('./img/photo-7-lg.png')"></div>
                         <div class="photo-card__content">
-                            <span class="photo-card__name">Надежда<span>(45 часов назад)</span></span>
+                            <span class="photo-card__name">Надежда <span>(45 часов назад)</span></span>
                             <p class="photo-card__text">
                                 Всем GM и взаимные лайки!
                             </p>
@@ -128,22 +128,6 @@
                         </div>
                     </div>
                 </li>
-                <li class="photo-list__item">
-                    <div class="photo-card">
-                        <div class="photo-card__img" style="background-image: url('./img/photo-7-lg.png')"></div>
-                        <div class="photo-card__content">
-                            <span class="photo-card__name">Надежда<span>(45 часов назад)</span></span>
-                            <p class="photo-card__text">
-                                Всем GM и взаимные лайки!
-                            </p>
-                            <div class="photo-card__like">
-                                <span>Нравится: 2560</span>
-                                <button type="button" class=""><span class="i-heart"></span></button>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-
             </ul>
         </div>
     </section>
@@ -154,7 +138,7 @@
                 Выкладывайте все, что накопилось в телефоне!
             </p>
             <div class="graphics-editor">
-                <div class="graphics-editor__img" style="background-image: url('./img/photo-8-sm.png')">
+                <div class="graphics-editor__img" style="background-image: url('./img/photo-8-sm.png')"></div>
                     <div class="graphics-editor__filters">
                         <div class="graphics-editor__item">
                             <span class="i-frame"></span>
@@ -173,7 +157,6 @@
                             <button type="button" class="btn graphics-editor__btn-cancel"></button>
                         </div>
                     </div>
-                </div>
             </div>
         </div>
     </section>
