--- a/html/pages/photo.html
+++ b/html/pages/photo.html
@@ -157,17 +157,17 @@
                         </button>
                     </div>
                     <div class="tabs__content">
-                        <div class="tabs__content__item">
+                        <div class="tabs__content-item tabs__content-item--frame">
                             <div class="progress">
                                 <span class="progress__bar"></span>
                             </div>
                         </div>
-                        <div class="tabs__content__item">
+                        <div class="tabs__content-item tabs__content-item--fill">
                             <div class="progress">
                                 <span class="progress__bar"></span>
                             </div>
                         </div>
-                        <div class="tabs__content__item">
+                        <div class="tabs__content-item tabs__content-item--brightness">
                             <div class="progress">
                                 <span class="progress__bar"></span>
                             </div>
