--- a/html/pages/promo.html
+++ b/html/pages/promo.html
@@ -44,7 +44,7 @@
                 </div>
 
                 <div class="col">
-                    <div class=fieldset" data-legend="С каким приложением путешествовали?">
+                    <div class="fieldset" data-legend="С каким приложением путешествовали?">
                         <div class="c-radio-group">
                             <label class="c-radio">
                                 <input type="radio" name="app-name" value="iOS" checked>
@@ -72,7 +72,7 @@
                 </div>
             </div>
 
-            <div class=fieldset" data-legend="Контактная информация">
+            <div class="fieldset" data-legend="Контактная информация">
                 <div class="row">
                     <div class="col">
                         <label class="c-input">
@@ -93,7 +93,7 @@
                     </div>
                 </div>
             </div>
-            <div class=fieldset" data-legend="Ваши безбашенные достижения в путешествии">
+            <div class="fieldset" data-legend="Ваши безбашенные достижения в путешествии">
                 <div class="c-checkbox-group">
                     <div class="row">
                         <div class="col">
@@ -147,12 +147,13 @@
                     </div>
                 </div>
             </div>
-            <div class=fieldset" data-legend="Опишите свои эмоции">
+            <div class="fieldset" data-legend="Опишите свои эмоции">
                 <textarea rows="4" placeholder="Можно прям в красках, не стесняясь в выражениях" name="impressions"></textarea>
             </div>
-            <button type="submit" class="">Отправить форму</button>
+            <button type="submit" class="btn-submit">Отправить форму</button>
             <span>* — обязательные для заполнения поля</span>
         </form>
+    </div>
     </div>
 </main>
 [snp tpl="template/footer.html" ]
