--- a/html/pages/promo.html
+++ b/html/pages/promo.html
@@ -15,144 +15,147 @@
             <span class="ms-hidden">Пожалуйста, заполните форму ниже:</span>
         </p>
     </section>
-    <form>
-        <div class="row background-gray">
-            <div class="col col--lg">
-                <label class="c-input">
-                    <span class="c-input__label">Фамилия:</span>
-                    <div class="c-input__form">
-                        <input type="text" placeholder="Укажите фамилию *" required>
+    <div class="container">
+        <form class="form-promo" autocomplete="on">
+
+            <section class="form-promo__user">
+                <div class="c-input c-input--row">
+                    <label class="c-input__label" for="lastname">Фамилия:</label>
+                    <div class="c-input__input">
+                        <input id="lastname" type="text" placeholder="Укажите фамилию *" required>
                         <div class="c-input__error">Поле обязательно для заполнения</div>
                     </div>
-                </label>
-
-                <label class="c-input">
-                    <span class="c-input__label">Имя:</span>
-                    <div class="c-input__form">
-                        <input type="text" placeholder="Введите ваше имя *" required>
+                </div>
+                <div class="c-input c-input--row">
+                    <label class="c-input__label" for="firstname">Имя:</label>
+                    <div class="c-input__input">
+                        <input id="firstname" type="text" placeholder="Введите ваше имя *" required>
                         <div class="c-input__error">Поле обязательно для заполнения</div>
                     </div>
-                </label>
-
-                <label class="c-input">
-                    <span class="c-input__label">Отчество:</span>
-                    <div class="c-input__form">
-                        <input type="text" placeholder="Ну и отчество тоже" required>
-                    </div>
-                </label>
-            </div>
-
-            <div class="col">
-                <div class="fieldset" data-legend="С каким приложением путешествовали?">
-                    <div class="c-radio-group">
-                        <label class="c-radio">
-                            <input class="hidden c-radio__input" type="radio" name="app-name" value="iOS" checked>
-                            <span class="c-radio__label">
-                                Pink для iOS
-                            </span>
-                        </label>
-                        <label class="c-radio">
-                            <input class="hidden c-radio__input" type="radio" name="app-name" value="Android">
-                            <span class="c-radio__label">
-                                Pink на Android
-                            </span>
-                        </label>
-                        <label class="c-radio">
-                            <input class="hidden c-radio__input" type="radio" name="app-name" value="Windows">
-                            <span class="c-radio__label">
-                                Windows
-                            </span>
-                        </label>
+                </div>
+                <div class="c-input c-input--row">
+                    <label class="c-input__label" for="middlename">Отчество:</label>
+                    <div class="c-input__input">
+                        <input id="middlename" type="text" placeholder="Ну и отчество тоже" required>
                     </div>
                 </div>
-            </div>
-        </div>
+            </section>
 
-        <div class="fieldset fieldset--hide" data-legend="Контактная информация">
-            <div class="row">
-                <div class="col">
-                    <label class="c-input">
-                        <span class="c-input__label">Номер телефона</span>
-                        <div>
-                            <input type="tel" placeholder="Номер, пожалуйста" required>
-                        </div>
-                    </label>
-                </div>
-                <div class="col">
-                    <label class="c-input">
-                        <span class="c-input__label">Адрес почты</span>
-                        <div>
-                            <input type="email" placeholder="Введите почту *" required>
-                            <div class="c-input__error">Поле обязательно для заполнения</div>
-                        </div>
-                    </label>
-                </div>
-            </div>
-        </div>
-        <div class="fieldset background-gray" data-legend="Ваши безбашенные достижения в путешествии">
-            <div class="c-checkbox-group">
-                <div class="row">
-                    <div class="col">
+            <section class="form-promo__achievements">
+                <div class="fieldset" data-legend="Ваши безбашенные достижения в путешествии">
+                    <div class="c-checkbox-group">
                         <label class="c-checkbox">
-                            <input class="hidden c-checkbox__input" type="checkbox" name="events" value="option-1" checked>
+                            <input class="c-checkbox__input" type="checkbox" name="events"
+                                   value="option-1"
+                                   checked>
                             <span class="c-checkbox__label">
                                 Сделал селфи с акулой
                                 </span>
                         </label>
                         <label class="c-checkbox">
-                            <input class="hidden c-checkbox__input" type="checkbox" name="events" value="option-2" checked>
+                            <input class="c-checkbox__input" type="checkbox" name="events"
+                                   value="option-2"
+                                   checked>
                             <span class="c-checkbox__label">
                                 Обгорел на пляже
                             </span>
                         </label>
-                    </div>
-                    <div class="col">
                         <label class="c-checkbox">
-                            <input class="hidden c-checkbox__input" type="checkbox" name="events" value="option-3">
+                            <input class="c-checkbox__input" type="checkbox" name="events"
+                                   value="option-3">
                             <span class="c-checkbox__label">
                                 Видел Чака Норриса
                             </span>
                         </label>
                         <label class="c-checkbox">
-                            <input class="hidden c-checkbox__input" type="checkbox" name="events" value="option-4">
+                            <input class="c-checkbox__input" type="checkbox" name="events"
+                                   value="option-4">
                             <span class="c-checkbox__label">
                                 Накупил сувениров
                             </span>
                         </label>
-                    </div>
-                    <div class="col">
                         <label class="c-checkbox">
-                            <input class="hidden c-checkbox__input" type="checkbox" name="events" value="option-5" checked>
+                            <input class="c-checkbox__input" type="checkbox" name="events"
+                                   value="option-5"
+                                   checked>
                             <span class="c-checkbox__label">
                                 Удержал башню
                             </span>
                         </label>
                         <label class="c-checkbox">
-                            <input class="hidden c-checkbox__input" type="checkbox" name="events" value="option-6">
+                            <input class="c-checkbox__input" type="checkbox" name="events"
+                                   value="option-6">
                             <span class="c-checkbox__label">
                                 Разгромил отель
                             </span>
                         </label>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="fieldset" data-legend="Опишите свои эмоции">
-            <div class="row">
+            </section>
+
+            <section class="form-promo__contacts">
+                <div class="fieldset" data-legend="Контактная информация">
+                    <div class="c-input">
+                        <label class="c-input__label" for="phone">Номер телефона</label>
+                        <div>
+                            <input id="phone" type="tel" placeholder="Номер, пожалуйста" required>
+                        </div>
+                    </div>
+                    <div class="c-input">
+                        <label class="c-input__label" for="email">Адрес почты</label>
+                        <div>
+                            <input id="email" type="email" placeholder="Введите почту *" required>
+                            <div class="c-input__error">Поле обязательно для заполнения</div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="form-promo__app">
+                <div class="fieldset" data-legend="С каким приложением путешествовали?">
+                    <div class="c-radio-group">
+                        <label class="c-radio">
+                            <input type="radio" name="app-name" value="iOS" checked>
+                            <span class="c-radio__input"></span>
+                            <span class="c-radio__label">
+                                Pink для iOS
+                            </span>
+                        </label>
+                        <label class="c-radio">
+                            <input type="radio" name="app-name" value="Android">
+                            <span class="c-radio__input"></span>
+                            <span class="c-radio__label">
+                                Pink на Android
+                            </span>
+                        </label>
+                        <label class="c-radio">
+                            <input type="radio" name="app-name" value="Windows">
+                            <span class="c-radio__input"></span>
+                            <span class="c-radio__label">
+                                Windows
+                            </span>
+                        </label>
+                    </div>
+                </div>
+            </section>
+
+            <section class="form-promo__emotions">
+                <div class="fieldset" data-legend="Опишите свои эмоции">
+                    <div class="c-input">
                 <textarea placeholder="Можно прям в красках, не стесняясь в выражениях"
                           name="impressions"></textarea>
+                    </div>
+                </div>
+            </section>
+
+            <div class="form-promo__footer">
+                <button type="submit" class="btn-success">Отправить форму</button>
+                <span class="form-promo__note">
+                <span class="color-pink">*</span> — обязательные <span class="xs-none sm-none">для заполнения</span> поля
+            </span>
             </div>
-        </div>
-        <div class="row row--sm">
-            <div class="col">
-                <button type="submit" class="btn-submit">Отправить форму</button>
-            </div>
-            <div class="col col--sm">
-                <span><span class="color-pink">*</span> — обязательные <span class="ms-hidden">для заполнения</span> поля</span>
-            </div>
-        </div>
-    </form>
-    </div>
+
+        </form>
     </div>
 </main>
 [snp tpl="template/footer.html" ]
