--- a/html/pages/promo.html
+++ b/html/pages/promo.html
@@ -44,51 +44,59 @@
             <section class="form-promo__achievements">
                 <div class="fieldset" data-legend="Ваши безбашенные достижения в путешествии">
                     <div class="c-checkbox-group">
-                        <label class="c-checkbox">
-                            <input class="c-checkbox__input" type="checkbox" name="events"
-                                   value="option-1"
-                                   checked>
-                            <span class="c-checkbox__label">
+                        <div class="col">
+                            <label class="c-checkbox">
+                                <input type="checkbox" name="events"
+                                       value="option-1"
+                                       checked>
+                                <span class="c-checkbox__input"></span>
+                                <span class="c-checkbox__label">
                                 Сделал селфи с акулой
                                 </span>
-                        </label>
-                        <label class="c-checkbox">
-                            <input class="c-checkbox__input" type="checkbox" name="events"
-                                   value="option-2"
-                                   checked>
-                            <span class="c-checkbox__label">
+                            </label>
+                            <label class="c-checkbox">
+                                <input type="checkbox" name="events"
+                                       value="option-2"
+                                       checked>
+                                <span class="c-checkbox__input"></span>
+                                <span class="c-checkbox__label">
                                 Обгорел на пляже
                             </span>
-                        </label>
-                        <label class="c-checkbox">
-                            <input class="c-checkbox__input" type="checkbox" name="events"
-                                   value="option-3">
-                            <span class="c-checkbox__label">
+                            </label>
+                        </div>
+                        <div class="col">
+                            <label class="c-checkbox">
+                                <input type="checkbox" name="events"
+                                       value="option-3">
+                                <span class="c-checkbox__input"></span>
+                                <span class="c-checkbox__label">
                                 Видел Чака Норриса
                             </span>
-                        </label>
-                        <label class="c-checkbox">
-                            <input class="c-checkbox__input" type="checkbox" name="events"
-                                   value="option-4">
-                            <span class="c-checkbox__label">
+                            </label>
+                            <label class="c-checkbox">
+                                <input type="checkbox" name="events"
+                                       value="option-4">
+                                <span class="c-checkbox__input"></span>
+                                <span class="c-checkbox__label">
                                 Накупил сувениров
                             </span>
-                        </label>
-                        <label class="c-checkbox">
-                            <input class="c-checkbox__input" type="checkbox" name="events"
-                                   value="option-5"
-                                   checked>
-                            <span class="c-checkbox__label">
-                                Удержал башню
-                            </span>
-                        </label>
-                        <label class="c-checkbox">
-                            <input class="c-checkbox__input" type="checkbox" name="events"
-                                   value="option-6">
-                            <span class="c-checkbox__label">
-                                Разгромил отель
-                            </span>
-                        </label>
+                            </label>
+                        </div>
+                        <div class="col">
+                            <label class="c-checkbox">
+                                <input type="checkbox" name="events"
+                                       value="option-5"
+                                       checked>
+                                <span class="c-checkbox__input"></span>
+                                <span class="c-checkbox__label">Удержал башню</span>
+                            </label>
+                            <label class="c-checkbox">
+                                <input type="checkbox" name="events"
+                                       value="option-6">
+                                <span class="c-checkbox__input"></span>
+                                <span class="c-checkbox__label">Разгромил отель</span>
+                            </label>
+                        </div>
                     </div>
                 </div>
             </section>
