--- a/html/pages/promo.html
+++ b/html/pages/promo.html
@@ -107,12 +107,14 @@
                         <label class="c-input__label" for="phone">Номер телефона</label>
                         <div>
                             <input id="phone" type="tel" placeholder="Номер, пожалуйста" required>
+                            <span class="i-phone"></span>
                         </div>
                     </div>
                     <div class="c-input">
                         <label class="c-input__label" for="email">Адрес почты</label>
                         <div>
                             <input id="email" type="email" placeholder="Введите почту *" required>
+                            <span class="i-mail"></span>
                             <div class="c-input__error">Поле обязательно для заполнения</div>
                         </div>
                     </div>
